{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 7,
  "lineage": "cb101de9-ea6a-c456-ce6a-01601231ddea",
  "resources": [
    {
      "module": "module.aurora",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:931887310203:subnet/subnet-0b53aa655464e1449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.16.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53aa655464e1449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931887310203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "igel-large-dev-private-subnet-1",
              "Role": "private-subnet"
            },
            "vpc_id": "vpc-0663f435af3d7cc05"
          }
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:931887310203:subnet/subnet-0d4386e68aa34f4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 4090,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4386e68aa34f4a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931887310203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "igel-large-dev-private-subnet-0",
              "Role": "private-subnet"
            },
            "vpc_id": "vpc-0663f435af3d7cc05"
          }
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:931887310203:vpc/vpc-0663f435af3d7cc05",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ece289d0442712de",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a5f464350604e514",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0663f435af3d7cc05",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff0ca7c03a56de19",
            "owner_id": "931887310203",
            "tags": {
              "Name": "igel-large-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:931887310203:security-group/sg-067c135269ea06c9b",
            "description": "Allow internal connections for igel-large-dev-db Aurora cluster",
            "egress": [],
            "id": "sg-067c135269ea06c9b",
            "ingress": [],
            "name": "igel-large-dev-db-security-group",
            "name_prefix": "",
            "owner_id": "931887310203",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "igel-large-dev-db-security-group"
            },
            "tags_all": {
              "Name": "igel-large-dev-db-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0663f435af3d7cc05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_aurora_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-928769957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-067c135269ea06c9b",
            "security_group_rule_id": "sgr-08584d4268831191d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aurora.aws_security_group.aurora_security_group",
            "module.aurora.data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}